Bug 499520 - Some animation settings do not set the dirty flag nor push onto the undo stack
Summary: Some animation settings do not set the dirty flag nor push onto the undo stack
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 5.2.6
Platform: NixOS Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-04 22:18 UTC by cromachina
Modified: 2025-05-06 19:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description cromachina 2025-02-04 22:18:21 UTC
SUMMARY
Setting the start or end time and setting the frame rate do not set the document dirty flag, nor do they push onto the undo stack, despite being seemingly saved to the document, and used as defaults for rendering animations. This also means that you cannot simply save after changing one of these settings, if the document is not dirty; You would have to dirty the document in some other way. Changing these settings also means you cannot undo them.

STEPS TO REPRODUCE
1. Create a document with an animation layer.
2. Save the document to clear the dirty flag.
3. Change the start/end time, and/or frame rate.

OBSERVED RESULT
Dirty flag is not set; Undo stack is not updated.

EXPECTED RESULT
Dirty flag is set; Undo stack is updated.

SOFTWARE/OS VERSIONS
Operating System: NixOS 25.05
KDE Plasma Version: 6.2.5
KDE Frameworks Version: 6.9.0
Qt Version: 6.8.1
Kernel Version: 6.6.71 (64-bit)
Graphics Platform: X11
Processors: 24 × AMD Ryzen 9 3900X 12-Core Processor
Memory: 62.7 GiB of RAM
Graphics Processor: AMD Radeon RX 7900 XTX
Comment 1 Emmet O'Neill 2025-04-03 21:29:23 UTC
Confirming this.
Comment 2 Emmet O'Neill 2025-04-04 03:04:45 UTC
Git commit 15d28d75dd503686243cd41b85e343e7d92657d5 by Emmet O'Neill.
Committed on 04/04/2025 at 03:04.
Pushed by emmetoneill into branch 'master'.

Animation: Created UndoCommand for animation settings changes.

- Marks document dirty when animation settings are changed (BUG:499520)
- Allows animation settings to be undone.

M  +1    -0    libs/image/CMakeLists.txt
M  +27   -3    plugins/dockers/animation/KisAnimTimelineDocker.cpp
M  +2    -0    plugins/dockers/animation/KisAnimTimelineDocker.h

https://invent.kde.org/graphics/krita/-/commit/15d28d75dd503686243cd41b85e343e7d92657d5
Comment 3 Emmet O'Neill 2025-05-06 19:40:32 UTC
Git commit 0f97ff523de41f38ecfef1e5b1c4ea98cff227b6 by Emmet O'Neill.
Committed on 06/05/2025 at 19:24.
Pushed by emmetoneill into branch 'master'.

Made KisImageAnimSettingCommands mergeable.

M  +2    -1    libs/command/kis_command_ids.h
M  +31   -2    libs/image/commands_new/KisImageAnimSettingCommand.cpp
M  +9    -5    libs/image/commands_new/KisImageAnimSettingCommand.h
M  +10   -11   plugins/dockers/animation/KisAnimTimelineDocker.cpp

https://invent.kde.org/graphics/krita/-/commit/0f97ff523de41f38ecfef1e5b1c4ea98cff227b6