Animation: Created UndoCommand for animation settings changes.

- Marks document dirty when animation settings are changed (BUG:499520)
- Allows animation settings to be undone.

BUG:499520